--- a/style.css
+++ b/style.css
@@ -21,7 +21,6 @@
 body {
 	display: flex;
 	flex-direction: column;
-	align-items: center;
 	justify-content: center;
 	margin: 0;
 	padding: 0;
@@ -66,7 +65,7 @@ figure.hero__wrapper {
 	font-weight: 900;
 }
 .paragraph {
-	width: 80%;
+	width: 90%;
 	max-width: 320px;
 	margin: 1rem 0;
 	text-align: center;
@@ -78,13 +77,14 @@ figure.hero__wrapper {
 .grid {
 	display: grid;
 	width: 89%;
-	grid-template-columns: repeat(3, 1fr);
+	max-width: 375px;
+	grid-template-columns: 75px repeat(2, 1fr);
 	grid-template-rows: 30px 25px;
 	justify-items: center;
 	align-items: center;
-	margin-top: 2rem;
+	margin-top: 1rem;
 	background-color: hsla(214, 35%, 91%, 0.411);
-	padding: 0.8rem;
+	padding: 1.2rem;
 	border-radius: 20px;
 }
 .plan__text {
@@ -93,14 +93,15 @@ figure.hero__wrapper {
 	color: var(--dark-blue);
 }
 .plan__price {
+	justify-self: start;
 	grid-row: 2 /-1;
 	grid-column: 2/3;
-	justify-self: start;
 	color: var(--desaturated-blue);
 }
 .plan__icon {
 	grid-column: 1/2;
 	grid-row: 1/-1;
+	justify-self: center;
 	background-color: var(--pale-blue);
 	border-radius: 50%;
 }
@@ -108,6 +109,9 @@ figure.hero__wrapper {
 .order__link {
 	grid-column: 3/-1;
 	grid-row: 1/-1;
+	justify-self: end;
+	font-size: 0.9rem;
+	font-weight: 700;
 	color: var(--bright-blue);
 }
 .order__link:hover {
