--- a/style.css
+++ b/style.css
@@ -147,6 +147,7 @@ figure.hero__wrapper {
 	margin: 1rem 0;
 	color: var(--desaturated-blue);
 	border: none;
+	background-color:transparent;
 }
 .btn--cancel:hover {
 	color: var(--dark-blue);
